<resources>
    <string name="app_name">Drive Gallery</string>
    <string name="create_folder">New folder</string>
    <string name="create_second_folder">New folder in folder</string>
    <string name="create_file">New File</string>
    <string name="pick_folder">Pick folder</string>
    <string name="pick_image">Pick image</string>
    <string name="display_files">Display files in folder</string>
    <string name="display_image">Display image</string>
</resources>
